# yt-music

./: .gitignore  CONTRIBUTING.md  DOGFOOD_CHECKLIST.md  README.md  command-palette.html  eslint.config.js  index.html  mini-player.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01-task.md  02-bug.md  config.yml
.github/workflows/: ci.yml  release.yml
e2e/: smoke.spec.ts
src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: command-palette-window.json  default.json  main-window.json  mini-player-window.json
src-tauri/src/: bridge_health.rs  commands.rs  diagnostics.rs  lib.rs  main.rs  mini_player.rs  palette.rs  playback.rs  updater.rs
src/bridge/: theme.ts  types.ts
src/command-palette/: CommandPalette.css  CommandPalette.tsx  main.tsx
src/mini-player/: MiniPlayer.css  MiniPlayer.tsx  main.tsx
src/styles/: theme.css
